--- a/Lesson_4/styles/main.css
+++ b/Lesson_4/styles/main.css
@@ -4,7 +4,9 @@ body{
     padding:20px;
     background-color:#fff;
     background-image: url('../images/professional.jpg');
-    background-repeat: none;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
     color: #fff;
 }
 
