--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url('/image/welcome_bg.jpg');
+    background-image: url('image/welcome_bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 100%;
