--- a/Lesson_6/styles/main.css
+++ b/Lesson_6/styles/main.css
@@ -1,12 +1,104 @@
-.box, .text{
-    background-color: salmon;
+body{
+    box-sizing: border-box;
     color: #fff;
-    font-size: 25px;
+  
+}
+
+.container{
+    background-color: #3399cc;
+    border: 25px solid #2b81ac;
+    max-width: 985px;
+    margin: 0 auto;
+    padding: 20px 80px;
+}
+
+i {
+    font-size: 30px;
+    margin-left: 10px;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    font-size: 0;
+    border: 3px solid white;
+    background-color: white;
+    
+}
+
+li {
+    display: inline-block;
+    height: 150px;
+    font-size: 20px;
+    box-sizing: border-box;
+    border: 3px solid white;
+    background-color: #3399CC;
+    vertical-align: middle;
+}
+
+.blocks{
+    width: 100%;
+}
+
+.blocks li{
+    display: inline-block;
+    padding: 25px 0;
+    border: 2px solid #fff;
     text-align: center;
-
+    font-size: 22 px;
 }
 
-.box{
-    width: 100px;
-    height: 100px;
+.blocks div{
+    padding-top: 10px;
+    opacity: 0.7;
 }
+
+.blocks li:hover div{
+    opacity: 1;
+}
+
+.blocks i {
+    font-size: 30px;
+}
+
+.block50{
+    width: 50%;
+}
+
+.block25{
+    width: 25%;
+}
+
+.block100{
+    width: 100%;
+}
+
+
+
+
+li div {
+    height: 150px;
+    vertical-align: middle;
+    text-align: center;
+}
+
+li p:last-child {
+    opacity: 0.7;
+}
+
+i {
+    font-size: 30px;
+}
+
+ul:hover li {
+    opacity: 0.7;
+    transition: all 0.3s ease-in-out;
+}
+
+ul:hover li:hover {
+    opacity: 1;
+}
+
+
+
+
