--- a/Lesson_6/styles/main.css
+++ b/Lesson_6/styles/main.css
@@ -1,6 +1,7 @@
 body{
     box-sizing: border-box;
     color: #fff;
+    
   
 }
 
@@ -10,11 +11,24 @@ body{
     max-width: 985px;
     margin: 0 auto;
     padding: 20px 80px;
+    
 }
 
-i {
-    font-size: 30px;
+img {
+    width: 30px;
     margin-left: 10px;
+}
+
+div p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+i{
+    font-size: 25px;
+    margin-left: 10px;
+    
 }
 
 ul {
