--- a/Lesson_6/styles/main.css
+++ b/Lesson_6/styles/main.css
@@ -3,7 +3,7 @@ body {
     color: #fff;
     font-family: "Noto Sans", sans-serif;
     margin: 0;
-    padding: 0;
+    padding: 40px;
 }
 
 .container {
