--- a/Lesson_7/styles/main.css
+++ b/Lesson_7/styles/main.css
@@ -1,5 +1,155 @@
-body{
+body {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: #000;
+    width: 100%;
+}
+
+.header {
+    padding: 50px;
+    width: 1400px;
+    margin: 0 auto;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 45px;
+}
+
+.main_logo,
+nav,
+.header_buttons,
+.hero,
+.introduction,
+.hero_image, .feature {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.main_logo img {
+    width: 185px;
+    height: auto;
+    margin-right: 500px;
+    padding: 10px;
+}
+
+
+ul {
+    list-style: none;
+    height: 28px;
+    margin-left: 20px;
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+li {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 15px;
+}
+
+li:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+
+.header_buttons {
+    margin-left: 25px;
+}
+
+button {
+    width: 100px;
+    height: 45px;
+    margin-right: 5px;
+    font-weight: bold;
+    border: 2px grey;
+    transition: width 2s;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+button:hover {
+    width: 150px;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.action {
+    background-color: #ff9900;
+    color: #fff;
+}
+
+
+.hero {
+    padding: 50px;
+    width: 1440px;
+    margin-left: 45px;
+}
+
+
+.introduction {
+    width: 520px;
+    height: 330px;
+}
+
+h1 {
+    font-weight: bold;
+    line-height: 55px;
+    color: #2F281E;
+    font-size: 44px;
+}
+
+p {
+    width: 458px;
+    height: 95px;
+    font-size: 18px;
+}
+
+.watch_video_button {
+    width: 160px;
+    height: auto;
+    background-color: #fff;
+    text-decoration: underline;
+    color: #ff9900;
+}
+
+.triangle {
+    width: 10px;
+    height: auto;
+    padding-right: 10px;
+}
+
+.hero_image img {
+    width: 605px;
+    height: 500px;
+    margin-left: 650px;
+    margin-top: -400px;
+}
+
+.feature {
+    padding: 50px;
+    width: 1440px;
+    margin-left: 45px;
+}
+
+/* .feature_heading{
+    width: 540px;
+    height: 108px;
+} */
+
+h2{
+    margin-top: 110px;
+    margin-left: 400px;
+    font-size: 36px;
+    text-align: center;
+    width: 540px;
 }
