--- a/Lesson_7/styles/main.css
+++ b/Lesson_7/styles/main.css
@@ -6,81 +6,79 @@ body {
     padding: 0;
     box-sizing: border-box;
     color: #000;
-    width: 100%;
+}
+ 
+.container{
+    max-width: 1126px;
+    width: 90%;
+    margin: 0 auto;
 }
 
 .header {
-    padding: 50px;
-    width: 1400px;
-    margin: 0 auto;
-    display: inline-block;
-    vertical-align: middle;
-    margin-left: 45px;
+    padding: 35px 0 17px;
 }
 
 .main_logo,
-nav,
+.nav,
 .header_buttons,
 .hero,
 .introduction,
-.hero_image, .feature {
+.hero_image{
     display: inline-block;
     vertical-align: middle;
 }
 
+
 .main_logo img {
-    width: 185px;
-    height: auto;
-    margin-right: 500px;
-    padding: 10px;
+    width: 175px;
 }
 
 
 ul {
     list-style: none;
-    height: 28px;
-    margin-left: 20px;
+    padding: 0;
+}
+
+.menu li {
     display: inline-block;
     vertical-align: middle;
-    width: 100%;
+    margin-right: 35px;
 }
 
 a {
     text-decoration: none;
     color: inherit;
-}
-
-li {
     display: inline-block;
-    vertical-align: middle;
-    margin-left: 15px;
 }
 
-li:hover {
+.menu li:last-child{
+    margin-right: 60px;
+}
+
+.nav{
+    width: 60%;
+    text-align: right;
+}
+
+li a:hover {
     cursor: pointer;
     text-decoration: underline;
-}
-
-
-.header_buttons {
-    margin-left: 25px;
 }
 
 button {
     width: 100px;
     height: 45px;
-    margin-right: 5px;
     font-weight: bold;
-    border: 2px grey;
-    transition: width 2s;
-    display: inline-block;
-    vertical-align: middle;
+    border: 3px grey;
+    border-radius: 3px;
+    padding: 12px 20px;
+    text-align: center;
 }
 
 button:hover {
-    width: 150px;
     text-decoration: underline;
     cursor: pointer;
+    text-transform:uppercase;
 }
 
 .action {
@@ -89,67 +87,245 @@ button:hover {
 }
 
 
-.hero {
-    padding: 50px;
-    width: 1440px;
-    margin-left: 45px;
+.hero{
+    padding-top: 40px;
+    font-size: 0;
 }
 
-
-.introduction {
-    width: 520px;
-    height: 330px;
-}
-
-h1 {
-    font-weight: bold;
-    line-height: 55px;
-    color: #2F281E;
+.main_title{
     font-size: 44px;
+    line-height: 55px;
+    font-weight: bold;
+    color: #000;
 }
 
-p {
-    width: 458px;
-    height: 95px;
+.introduction:first-child{
+    width: 45%;
+}
+
+.introduction:last-child{
+    width: 45%;
+    padding-left: 10px;
+}
+
+.title_details{
     font-size: 18px;
+    color:#544837;
+    line-height: 28px;
+    width: 100%;
+    max-width: 458px;
+    font-weight: 400;
+    padding: 30px 0 30px 0;
+}
+
+.started_button{
+    width: 140px;
 }
 
 .watch_video_button {
-    width: 160px;
+    width: 190px;
     height: auto;
     background-color: #fff;
     text-decoration: underline;
     color: #ff9900;
 }
 
+
 .triangle {
     width: 10px;
-    height: auto;
-    padding-right: 10px;
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .hero_image img {
-    width: 605px;
+    max-width: 800px;
     height: 500px;
     margin-left: 650px;
     margin-top: -400px;
 }
 
 .feature {
-    padding: 50px;
-    width: 1440px;
-    margin-left: 45px;
+    padding-top: 120px;
+    font-size: 0;
 }
-
-/* .feature_heading{
-    width: 540px;
-    height: 108px;
-} */
 
 h2{
-    margin-top: 110px;
-    margin-left: 400px;
+    margin: 0 auto;
     font-size: 36px;
     text-align: center;
-    width: 540px;
+    width: 520px;
+    padding-bottom: 60px;
+    font-weight: bold;
+    line-height: 48px;
 }
+
+.column.cards{
+    max-width: 270px;
+    width: 25%;
+}
+
+.column{
+    display: inline-block;
+    vertical-align: top;
+}
+
+.icon{
+    max-height: 18px;
+    max-width: 18px;
+    padding: 16px;
+    border-radius: 20px;
+}
+
+.pointer_icon{
+    background-color: #7752be;
+    width: 750px;
+}
+
+.survey_icon{
+    background-color:#fab005
+}
+
+.preference_icon{
+    background-color:#f03e3d;
+}
+
+.hourglass_icon{
+    background-color: #4dadf7;
+}
+
+
+.details{
+    max-width: 200px;
+    padding-top: 28px;
+}
+
+.title_detail{
+    font-size: 22px;
+    font-weight: bold;
+    margin:0;
+    padding-bottom: 12px;
+}
+
+.deets{
+    font-size:16px;
+    font-weight: 400;
+    margin: 0;
+}
+
+.mid_sign_up > button{
+    display: block;
+    margin: 0 auto;
+    margin-top: 60px;
+    text-align: center;
+    padding: 15px;
+}
+
+.mid_sign_up>button:hover{
+    text-decoration: underline;
+}
+
+.professional{
+    margin-top: 120px;
+}
+
+
+.professional .pros{
+    max-width: 520px;
+    width: 100%;
+}
+
+.section_title{
+    font-size: 36px;
+    font-weight: bold;
+    width: 520px;
+    padding-bottom: 5px;
+    margin-top: 5px;
+}
+
+.point .point_title{
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 8px;   
+}
+
+.point{
+    max-width: 480px;
+    padding-top: 28px;
+}
+
+.pros{
+    display: inline-block;
+    margin-left: 650px;
+    margin-bottom: -585px;
+}
+
+p.deets{
+    max-width: 450px;
+}
+
+.managers{
+    margin-left: 65px;
+}
+
+.checklist{
+    display: flex;
+    gap: 20px;
+}
+
+.check{
+    height: 12px;
+    width: 16px;
+    padding: 12px 10px;
+    border-radius: 15px;
+    background-color: #ff9900;
+}
+
+main{
+    border-bottom:1px solid rgba(188,208,229,0.5);
+    padding-bottom: 120px;
+}
+
+.footer{
+    padding-top:120px;
+    padding-bottom:80px;
+}
+
+.footer_nav{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.footer_nav .column{
+    display: inline-block;
+    width: 25%;
+    padding:0;
+}
+
+.email{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    gap:10px;
+}
+
+.email_sign{
+    height: 35px;
+    width: 100%;
+    border: 1px solid #bcd0ef;
+    border-radius: 4px;
+}
+
+.email_sign:hover{
+    border: 3px solid #ff9900;
+}
+
+.email_sign:active, .email_sign:focus, .email_sign::selection{
+    outline: 1px solid #ff9900;
+    background-color: #f5f5f5;
+    initial-value: none;
+}
+
+
